# GlubLink

./: .gitignore  IMPLEMENTATION_STATUS.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  README.md  RUN_INSTRUCTIONS.md  analysis_options.yaml  pubspec.yaml
GlubLink/: pyproject.toml
GlubLink/src/glublink/: __main__.py
lib/: main.dart
lib/core/animations/: spring_config.dart
lib/core/constants/: app_constants.dart  constants.dart
lib/core/database/: ai_cache_entity.dart  change_log_entity.dart  database_service.dart  media_entity.dart  note_entity_db.dart  tag_entity_db.dart  user_settings_db.dart
lib/core/models/: media_entity.dart  models.dart  note_entity.dart  tag_entity.dart  user_settings_entity.dart
lib/core/navigation/: app_router.dart  navigation_history.dart
lib/core/services/: ai_service.dart
lib/core/theme/: app_colors.dart  app_radius.dart  app_spacing.dart  app_theme.dart  app_typography.dart  theme.dart
lib/core/utils/: date_utils.dart  utils.dart
lib/features/gallery/: gallery.dart
lib/features/tags/: tags.dart
lib/shared/cache/: image_cache_manager.dart
lib/shared/models/: models.dart  (+5 more)
test/: widget_test.dart
windows/: CMakeLists.txt
Методички в формате docx плюс полная/: GlubLink.docx  GlubLink_раздел_14-17.docx  GlubLink_раздел_3.docx  GlubLink_раздел_4-6.docx  GlubLink_раздел_7-8.docx  GlubLink_раздел_9-13.docx  GlubLink_разделы_1-2.docx
Методички в формате md поделенные/: GlubLink_раздел_14-17.md  GlubLink_раздел_3.md  GlubLink_раздел_4-6.md  GlubLink_раздел_7-8.md  GlubLink_раздел_9-13.md  GlubLink_разделы_1-2.md
(+33 files in other folders)
