[tool.poetry]
name = "glublink"
version = "0.1.0"
description = "Personal media manager for furry art"
authors = ["Glub <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.6.0"
Pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
